--- a/app/digital-twin-static/package.json
+++ b/app/digital-twin-static/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "@mapbox/mapbox-gl-draw": "^1.0.9",
+    "jsoneditor": "^5.24.7",
+    "lodash": "^4.17.11",
     "mapbox-gl": "^0.50.0",
     "material-design-icons-iconfont": "^3.0.3",
     "vue": "^2.5.17",
