--- a/setup.cfg
+++ b/setup.cfg
@@ -20,7 +20,18 @@ exclude = docs
 [aliases]
 # Define setup.py command aliases here
 test = pytest
+docs = build_sphinx
 
 [tool:pytest]
-collect_ignore = ['setup.py']
-log_level = DEBUG
+addopts = 
+    --cov --cov-report term-missing --cov-report html
+    --verbose
+norecursedirs =
+    dist
+    build
+    .tox
+testpaths = tests
+
+[build_sphinx]
+source_dir = docs
+build_dir = docs/_build
