Updated setup files

--- a/setup.cfg
+++ b/setup.cfg
@@ -22,6 +22,15 @@ exclude = docs
 test = pytest
 docs = build_sphinx
 
+[options.extras_require]
+# Add here additional requirements for extra features, to install with:
+# `pip install transport-network-analysis[PDF]` like:
+# PDF = ReportLab; RXP
+# Add here test requirements (semicolon/line-separated)
+testing =
+    pytest
+    pytest-cov
+
 [tool:pytest]
 addopts = 
     --cov --cov-report term-missing --cov-report html
