--- a/setup.cfg
+++ b/setup.cfg
@@ -9,7 +9,7 @@ author = TU Delft / CITG
 author-email = m.vankoningsveld@tudelft.nl
 license = mit
 url = https://pyscaffold.org/
-long-description = file: README.rst
+long-description = file: README.md
 # Change if running only on Windows, Mac or Linux (comma-separated)
 platforms = any
 # Add here all kinds of additional classifiers as defined under
@@ -41,6 +41,7 @@ install_requires =
     pyscaffold
     simplekml
     matplotlib
+    click
 
 # The usage of test_requires is discouraged, see `Dependency Management` docs
 # tests_require = pytest; pytest-cov
@@ -89,6 +90,7 @@ norecursedirs =
     dist
     build
     .tox
+    .eggs
 testpaths = tests
 
 [aliases]
