test for running tests

--- a/setup.cfg
+++ b/setup.cfg
@@ -49,8 +49,6 @@ install_requires =
 
 [options.packages.find]
 where = digital_twin
-exclude =
-    tests
 
 [options.extras_require]
 # Add here additional requirements for extra features, to install with:
@@ -72,11 +70,6 @@ testing =
 # pyscaffold.cli =
 #     awesome = pyscaffoldext.awesome.extension:AwesomeExtension
 
-[test]
-# py.test options when running `python setup.py test`
-# addopts = --verbose
-extras = True
-
 [tool:pytest]
 # Options for py.test:
 # Specify command line options as you would do when invoking py.test directly.
@@ -94,6 +87,7 @@ testpaths = tests
 
 [aliases]
 docs = build_sphinx
+test=pytest
 
 [bdist_wheel]
 # Use this option if your package is pure-python
@@ -117,10 +111,3 @@ exclude =
     dist
     .eggs
     docs/conf.py
-
-[pyscaffold]
-# PyScaffold's parameters when the project was created.
-# This will be used when updating. Do not change!
-version = 3.1
-
-package = hydraulic_infrastructure_realisation
