--- a/setup.cfg
+++ b/setup.cfg
@@ -42,7 +42,8 @@ install_requires =
     matplotlib
     click
     nose
-    flask
+    flask,
+    flask_cors
 
 # The usage of test_requires is discouraged, see `Dependency Management` docs
 # tests_require = pytest; pytest-cov
