--- a/.gitignore
+++ b/.gitignore
@@ -109,3 +109,7 @@ ENV/
 
 # notebook results
 *.kml
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
