--- a/.dockerignore
+++ b/.dockerignore
@@ -102,4 +102,7 @@ ENV/
 .mypy_cache/# Elastic Beanstalk Files
 .elasticbeanstalk/*
 .git
+.gitignore# Elastic Beanstalk Files
+.elasticbeanstalk/*
+.git
 .gitignore
