--- a/.dockerignore
+++ b/.dockerignore
@@ -105,4 +105,7 @@ ENV/
 .gitignore# Elastic Beanstalk Files
 .elasticbeanstalk/*
 .git
+.gitignore# Elastic Beanstalk Files
+.elasticbeanstalk/*
+.git
 .gitignore
