Add timeout to infinite loop test
If the infinite loop detection breaks, the unit test will run
indefinitely. Add a timeout to make it fail in this case.

--- a/setup.cfg
+++ b/setup.cfg
@@ -61,6 +61,7 @@ where = digital_twin
 testing =
     pytest
     pytest-cov
+    pytest-timeout
 
 [options.entry_points]
 # Add here console scripts like:
