--- a/.gitignore
+++ b/.gitignore
@@ -113,3 +113,6 @@ ENV/
 .elasticbeanstalk/*
 !.elasticbeanstalk/*.cfg.yml
 !.elasticbeanstalk/*.global.yml
+
+# simulations stored by server
+simulations
