--- a/setup.cfg
+++ b/setup.cfg
@@ -52,7 +52,7 @@ install_requires =
 # python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*
 
 [options.packages.find]
-where = digital_twin
+where = openclsim
 
 [options.extras_require]
 # Add here additional requirements for extra features, to install with:
