--- a/tox.ini
+++ b/tox.ini
@@ -11,7 +11,7 @@ python =
 [testenv:flake8]
 basepython = python
 deps = flake8
-commands = flake8 digital_twin
+commands = flake8 openclsim
 
 [testenv]
 setenv =
