--- a/setup.cfg
+++ b/setup.cfg
@@ -3,8 +3,8 @@
 # http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
 
 [metadata]
-name = Digital Twin
-description = The Digital Twin package aims to facilitate basic nautical traffic simulations.
+name = OpenCLSim
+description = The OpenCLSim package aims to facilitate basic nautical traffic simulations.
 author = TU Delft / CITG
 author-email = m.vankoningsveld@tudelft.nl
 license = mit
