--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,12 +12,12 @@ jobs:
           name: Install coverage badge beforte running tests
           command: |
             docker exec -it openclsim bash -c "pip install coverage coverage-badge"
-            docker exec -it openclsim bash -c "mkdir openclsim/htmlcov"
       
       - run:
           name: Run tests - Pytest
           command: |
             docker exec -it openclsim bash -c "python setup.py test"
+            docker exec -it openclsim bash -c "ls"
             docker cp openclsim:/openclsim/htmlcov /tmp/artifacts
       
       - run:
