Added logo to documentation

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@
 
 [metadata]
 name = OpenCLSim
-description = The OpenCLSim package aims to facilitate basic nautical traffic simulations.
+description = Complex Logistics Simulation - Rule based planning of cyclic activities and in depth comparison of different system concepts.
 author = TU Delft / CITG
 author-email = m.vankoningsveld@tudelft.nl
 license = mit
