OpenCLSim reference fixed

--- a/setup.cfg
+++ b/setup.cfg
@@ -8,7 +8,7 @@ description = Complex Logistics Simulation - Rule based planning of cyclic activ
 author = TU Delft / CITG
 author-email = m.vankoningsveld@tudelft.nl
 license = mit
-url = https://pyscaffold.org/
+url = https://github.com/TUDelft-CITG/OpenCLSim
 long-description = file: README.md
 # Change if running only on Windows, Mac or Linux (comma-separated)
 platforms = any
