changed the  Abstract class names for backwards compatibility
HasWeather to HasAbstractWeather and
HasWorkabilityCriteria to HasAbstractWorkabilityCriteria

--- a/setup.cfg
+++ b/setup.cfg
@@ -45,6 +45,7 @@ install_requires =
     nose
     flask
     flask_cors
+    abc
 
 # The usage of test_requires is discouraged, see `Dependency Management` docs
 # tests_require = pytest; pytest-cov
