Don't use Sphinx 3.x as it breaks on flasks request object

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,7 @@ jobs:
       - run:
           name: Build docs
           command: |
-            docker exec -it openclsim bash -c "pip install sphinx"
+            docker exec -it openclsim bash -c "pip install sphinx==2.3.1"
             docker exec -it openclsim bash -c "python setup.py docs"
             docker cp openclsim:/OpenCLSim/docs/_build/html /tmp/artifacts/docs
       
