clean-up some configs

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = OpencCLSim
+name = OpenCLSim
 author="Mark van Koningsveld",
 author_email="m.vankoningsveld@tudelft.nl",
 summary =The OpenCLSim package aims to facilitate rule based planning of cyclic activities and in depth comparison of different system concepts.
