--- a/setup.cfg
+++ b/setup.cfg
@@ -48,6 +48,11 @@ line_length=88
 [tool:pytest]
 addopts =
     --verbose
+    --cov
+    --cov-report html
+    --black
+    --isort
+    --pylama
     -W default
 testpaths = tests openclsim
 filterwarnings =
