--- a/setup.cfg
+++ b/setup.cfg
@@ -7,11 +7,11 @@ keywords =OpenCLSim
 license = MIT
 home-page = https://github.com/TUDelft-CITG/openclsim
 description-file = README.md
-classifiers=
-    'Development Status :: 2 - Pre-Alpha',
-    'Intended Audience :: Developers',
-    'Natural Language :: English',
-    'Programming Language :: Python :: 3',
+classifiers =
+
+    Development Status :: 4 - Beta
+
+    Programming Language :: Python
 
 [files]
 
