replace pyscaffold with setuptools_scm

--- a/setup.cfg
+++ b/setup.cfg
@@ -13,6 +13,51 @@ classifiers =
 
     Programming Language :: Python
 
+[options]
+packages = find:
+zip_safe = False  # https://mypy.readthedocs.io/en/latest/installed_packages.html
+include_package_data = True
+install_requires =
+    setuptools>=38.3
+    pandas>=0.24.0
+    numpy
+    simpy
+    shapely
+    pyproj
+    nose
+    plotly
+    matplotlib
+
+setup_requires = setuptools_scm
+
+[options.extras_require]
+# Add here additional requirements for extra features, to install with:
+# `pip install .[testing]` 
+
+# Add here test requirements (semicolon/line-separated)
+testing =
+    coverage-badge
+    faker
+    lxml
+    mock
+    mypy
+    pylama
+    pylama_pylint
+    black
+    pytest==6.0.2
+    pytest-black
+    pytest-cov
+    pytest-isort
+    pytest-logging
+    pytest-mock
+    sphinx >= 1.8.0
+    pytest-datadir
+    pytest-timeout
+    sphinx_rtd_theme
+    pytest-split
+    jupyter
+    simplekml
+    
 [files]
 
 packages =
@@ -27,16 +72,6 @@ ignore_missing_imports = True
 [mypy-openclsim]
 allow_untyped_defs = True
 
-[test]
-addopts = tests openclsim
-    --cov 
-    --cov-report term 
-    --cov-report html
-    --black
-    --isort
-    --pylama
-    -W default
-
 [tool:isort]
 known_first_party=openclsim
 multi_line_output=3
@@ -47,8 +82,8 @@ line_length=88
 
 [tool:pytest]
 addopts =
-    --verbose
-    --cov
+    --cov 
+    --cov-report term 
     --cov-report html
     --black
     --isort
