--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,8 @@
+# This file is used to configure your project.
+# Read more about the various options under:
+# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
+# https://setuptools.pypa.io/en/latest/references/keywords.html
+
 [metadata]
 name = OpenCLSim
 author="Mark van Koningsveld",
@@ -8,16 +13,19 @@ license = MIT
 home-page = https://github.com/TUDelft-CITG/openclsim
 description-file = README.md
 classifiers =
-
     Development Status :: 4 - Beta
-
     Programming Language :: Python
 
+
 [options]
-packages = find:
-zip_safe = False  # https://mypy.readthedocs.io/en/latest/installed_packages.html
+zip_safe = False
+packages = find_namespace:
 include_package_data = True
+package_dir =
+    =src
+
 install_requires =
+    importlib-metadata; python_version<"3.8"
     setuptools>=38.3
     pandas>=0.24.0
     numpy
@@ -28,14 +36,20 @@ install_requires =
     plotly
     matplotlib
 
-setup_requires = setuptools_scm
+[options.packages.find]
+where = src
+exclude =
+    tests
 
 [options.extras_require]
 # Add here additional requirements for extra features, to install with:
-# `pip install .[testing]` 
+# `pip install openclsim[PDF]` like:
+# PDF = ReportLab; RXP
 
 # Add here test requirements (semicolon/line-separated)
 testing =
+    setuptools
+    pytest
     coverage-badge
     faker
     lxml
@@ -44,7 +58,6 @@ testing =
     pylama
     pylama_pylint
     black
-    pytest==6.0.2
     pytest-black
     pytest-cov
     pytest-isort
@@ -57,14 +70,17 @@ testing =
     pytest-split
     jupyter
     simplekml
-    
-[files]
 
-packages =
-    openclsim
-
-[extras]
-
+[options.entry_points]
+# Add here console scripts like:
+# console_scripts =
+#     script_name = openclsim.module:function
+# For example:
+# console_scripts =
+#     fibonacci = openclsim.skeleton:run
+# And any other entry points, for example:
+# pyscaffold.cli =
+#     awesome = pyscaffoldext.awesome.extension:AwesomeExtension
 
 [mypy]
 ignore_missing_imports = True
@@ -72,8 +88,30 @@ ignore_missing_imports = True
 [mypy-openclsim]
 allow_untyped_defs = True
 
+[flake8]
+# Some sane defaults for the code style checker flake8
+max_line_length = 120
+extend_ignore = E203, W503
+# ^  Black-compatible
+#    E203 and W503 have edge cases handled by black
+exclude =
+    .tox
+    build
+    dist
+    .eggs
+    docs/conf.py
+
+[pytest]
+# py.test options when running `python setup.py test`
+addopts = tests src
+    --cov --cov-report term --cov-report html
+    --black
+    --flake8
+    --mypy
+    -W default
+
 [tool:isort]
-known_first_party=openclsim
+known_first_party=
 multi_line_output=3
 include_trailing_comma=True
 force_grid_wrap=0
@@ -81,55 +119,50 @@ use_parentheses=True
 line_length=88
 
 [tool:pytest]
+# Specify command line options as you would do when invoking pytest directly.
+# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
+# in order to write a coverage file that can be read by Jenkins.
+# CAUTION: --cov flags may prohibit setting breakpoints while debugging.
+#          Comment those flags to avoid this pytest issue.
 addopts =
-    --cov 
-    --cov-report term 
-    --cov-report html
-    --black
-    --isort
-    --pylama
-    -W default
-testpaths = tests openclsim
-filterwarnings =
-    error
-    ignore::UserWarning
-    
-[pylama:tests/*.py]
-format = pylint
-linters = pycodestyle,pydocstyle,pyflakes
-ignore = D107,D203,D212,D213,D402,D413,D415,D416,D417
+    --cov openclsim --cov-report term-missing
+    --verbose
+norecursedirs =
+    dist
+    build
+    .tox
+testpaths = tests
+# Use pytest markers to select/deselect specific tests
+# markers =
+#     slow: mark tests as slow (deselect with '-m "not slow"')
+#     system: mark end-to-end system tests
 
-[pylama]
-format = pylint
-linters = pycodestyle,pydocstyle,pyflakes
-skip = *docs*
-### see https://github.com/PyCQA/pydocstyle/issues/397 
-### for docstring conventions. This package uses the numpy convention
-### E501: line to long >79 is taken care of by black
-### D202: Conflicts with black
-ignore = D102,D107,D202,D203,D212,D402,D413,D415,D416,D417,E501,E203
-# ignore = D105,D202,D203,D205,E1136,D213,D406,D407,D413,E501,D101,D102,D103,E203
-
-[pylama:pycodestyle]
-max_line_length = 88
-
-[pylama:pylint]
-disable=R,C,W,I
-good-names=log
+[devpi:upload]
+# Options for the devpi: PyPI server and packaging tool
+# VCS export must be deactivated since we are using setuptools-scm
+no_vcs = 1
+formats = bdist_wheel
 
 [aliases]
 docs = build_sphinx
-
-[bdist_wheel]
-universal = 1
+test = pytest
 
 [build_sphinx]
 source_dir = docs
 build_dir = docs/_build
 
 [pbr]
+# Let pbr run sphinx-apidoc
 autodoc_tree_index_modules = True
+# autodoc_tree_excludes = ...
+# Let pbr itself generate the apidoc
+# autodoc_index_modules = True
+# autodoc_exclude_modules = ...
+# Convert warnings to errors
+# warnerrors = True
 
-[devpi:upload]
-no-vcs = 1
-formats = bdist_wheel
+[pyscaffold]
+# PyScaffold's parameters when the project was created.
+# This will be used when updating. Do not change!
+version = 4.1.1
+package = openclsim
