--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,22 +1,27 @@
-// See https://aka.ms/vscode-remote/devcontainer.json for format details.
 {
-    "dockerComposeFile": [
-        "../docker-compose.yml",
-        "docker-compose.dev.yml"
-    ],
-    "service": "main",
-    "workspaceFolder": "/OpenCLSim",
-    "extensions": [
-        "ms-python.python"
-    ],
-    "settings": {
-        "python.pythonPath": "/opt/conda/bin/python",
-        "python.linting.pylintEnabled": false,
-        "python.linting.enabled": true,
-        "python.testing.unittestEnabled": false,
-        "python.testing.nosetestsEnabled": false,
-        "python.testing.pytestEnabled": true,
-        "python.linting.pylamaEnabled": true,
-        "python.formatting.provider": "black"
-    },
+	"name": "Docker Compose",
+	"dockerComposeFile": [
+		"../docker-compose.yml",
+		"docker-compose.yml"
+	],
+	"service": "package",
+	"workspaceFolder": "/OpenCLSim",
+	"extensions": [
+		"ms-python.python",
+		"ms-python.vscode-pylance",
+	],
+	"settings": {
+		"python.pythonPath": "/usr/local/bin/python",
+		"python.linting.pylintEnabled": false,
+		"python.linting.enabled": true,
+		"python.testing.unittestEnabled": false,
+		"python.testing.nosetestsEnabled": false,
+		"python.testing.flake8Enabled": true,
+		"python.testing.pytestEnabled": true,
+		"python.linting.pylamaEnabled": false,
+		"python.formatting.provider": "black",
+		"hediet.vscode-drawio.theme": "Kennedy",
+		"git.enabled": false
+	},
+	"postCreateCommand": "bash .devcontainer/postCreateCommand.sh"
 }
