python setup.py test -> pytest

--- a/setup.cfg
+++ b/setup.cfg
@@ -102,7 +102,7 @@ exclude =
     docs/conf.py
 
 [pytest]
-# py.test options when running `python setup.py test`
+# py.test options when running `pytest`
 addopts = tests src
     --cov --cov-report term --cov-report html
     --black
