--- a/setup.cfg
+++ b/setup.cfg
@@ -49,7 +49,6 @@ exclude =
 # Add here test requirements (semicolon/line-separated)
 testing =
     setuptools
-    pytest
     coverage-badge
     faker
     lxml
@@ -58,16 +57,20 @@ testing =
     pylama
     pylama_pylint
     black
+    pytest
     pytest-black
     pytest-cov
+    pytest-flake8
     pytest-isort
     pytest-logging
+    pytest-mypy
+    pytest-runner
     pytest-mock
-    sphinx >= 1.8.0
     pytest-datadir
     pytest-timeout
-    sphinx_rtd_theme
     pytest-split
+    sphinx >= 1.8.0
+    sphinx_rtd_theme
     jupyter
     simplekml
 
@@ -124,14 +127,17 @@ line_length=88
 # in order to write a coverage file that can be read by Jenkins.
 # CAUTION: --cov flags may prohibit setting breakpoints while debugging.
 #          Comment those flags to avoid this pytest issue.
-addopts =
-    --cov openclsim --cov-report term-missing
-    --verbose
+addopts = tests src
+    --cov --cov-report term --cov-report html
+    --black
+    --flake8
+    --mypy
+    -W default
 norecursedirs =
     dist
     build
     .tox
-testpaths = tests
+testpaths = tests src
 # Use pytest markers to select/deselect specific tests
 # markers =
 #     slow: mark tests as slow (deselect with '-m "not slow"')
