--- a/setup.cfg
+++ b/setup.cfg
@@ -109,6 +109,7 @@ exclude =
 addopts = tests src
     --cov --cov-report term --cov-report html
     --black
+    --isort
     --flake8
     -W default
 
@@ -129,6 +130,7 @@ line_length=88
 addopts = tests src
     --cov --cov-report term --cov-report html
     --black
+    --isort
     --flake8
     -W default
 norecursedirs =
