--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@
 # https://setuptools.pypa.io/en/latest/references/keywords.html
 
 [metadata]
-name = OpenCLSim
+name = openclsim
 author="Mark van Koningsveld",
 author_email="m.vankoningsveld@tudelft.nl",
 summary =The OpenCLSim package aims to facilitate rule based planning of cyclic activities and in depth comparison of different system concepts.
