--- a/setup.cfg
+++ b/setup.cfg
@@ -26,7 +26,6 @@ package_dir =
 
 install_requires =
     importlib-metadata; python_version<"3.8"
-    setuptools>=38.3
     pandas>=0.24.0
     numpy
     simpy
@@ -48,7 +47,6 @@ exclude =
 
 # Add here test requirements (semicolon/line-separated)
 testing =
-    setuptools
     coverage-badge
     faker
     lxml
@@ -69,10 +67,11 @@ testing =
     pytest-datadir
     pytest-timeout
     pytest-split
-    sphinx >= 1.8.0
-    sphinx_rtd_theme
     jupyter
     simplekml
+docs =
+    sphinx>=1.8.0
+    sphinx_rtd_theme
 
 [options.entry_points]
 # Add here console scripts like:
